Implement the OpenID Connect `nonce` mechanism